--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <!-- About Section -->
   <section id="about">
-    <img src="profile.jpg" alt="Daniel Grimes portrait">
+    <img src="https://github.com/dgrimes1023/portfolio/blob/main/IMG_1046.JPEG?raw=true" alt="Daniel Grimes portrait">
     <h2>About Me</h2>
     <p>
       Hi, I’m Daniel Grimes, a junior Computer Science major with a minor in Finance 
