--- a/index.html
+++ b/index.html
@@ -16,16 +16,19 @@
 
   <!-- About Section -->
   <section id="about">
-    <img src="https://github.com/dgrimes1023/portfolio/blob/main/IMG_1046.JPEG?raw=true" alt="Daniel Grimes portrait">
-    <h2>About Me</h2>
-    <p>
-      Hi, I’m Daniel Grimes, a junior Computer Science major with a minor in Finance 
-      at Ohio University, graduating in May 2026. As an aspiring developer, I’m passionate 
-      about creating impactful solutions and am currently building a platform for task-based 
-      jobs. I am actively seeking co-op or internship opportunities where I can contribute 
-      to innovative projects, apply my skills, and grow as a developer. Let’s connect!
-    </p>
+    <img src="https://raw.githubusercontent.com/dgrimes1023/portfolio/main/IMG_1046.JPEG" alt="Daniel Grimes portrait">
+    <div>
+      <h2>About Me</h2>
+      <p>
+        Hi, I’m Daniel Grimes, a junior Computer Science major with a minor in Finance 
+        at Ohio University, graduating in May 2026. As an aspiring developer, I’m passionate 
+        about creating impactful solutions and am currently building a platform for task-based 
+        jobs. I am actively seeking co-op or internship opportunities where I can contribute 
+        to innovative projects, apply my skills, and grow as a developer. Let’s connect!
+      </p>
+    </div>
   </section>
+  
 
   <!-- Skills Section -->
   <section id="skills">
@@ -58,9 +61,9 @@
   <!-- Contact Section -->
   <section id="contact">
     <h2>Contact Me</h2>
-    <p>Email: <a href="mailto:daniel.grimes@example.com">daniel.grimes@example.com</a></p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/danielgrimes" target="_blank">linkedin.com/in/danielgrimes</a></p>
-    <p>GitHub: <a href="https://github.com/danielgrimes" target="_blank">github.com/danielgrimes</a></p>
+    <p>Email: <a href="mailto:dg298321@ohio.edu">dg298321@ohio.edu</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/daniel-grimes1023/" target="_blank">linkedin.com/in/daniel-grimes1023</a></p>
+    <p>GitHub: <a href="https://github.com/dgrimes1023" target="_blank">github.com/dgrimes1023</a></p>
   </section>
 
   <!-- Footer Section -->
