--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     <div>
       <h2>About Me</h2>
       <p>
-        Hi, I’m Daniel Grimes, a junior Computer Science major with a minor in Finance
-        at Ohio University, graduating in May 2026. As an aspiring developer, I’m passionate
+        Hi, I'm Daniel Grimes, a junior Computer Science major with a minor in Finance
+        at Ohio University, graduating in May 2026. As an aspiring developer, I'm passionate
         about creating impactful solutions and am currently building a platform for task-based
         jobs. I am actively seeking co-op or internship opportunities where I can contribute
-        to innovative projects, apply my skills, and grow as a developer. Let’s connect!
+        to innovative projects, apply my skills, and grow as a developer. Let's connect!
       </p>
     </div>
   </section>
@@ -62,6 +62,36 @@
           Developing a platform where users can post and complete tasks like cleaning, yard care, and moving assistance.
           Built the main page with Next.js and Node.js, with a focus on responsive design using Tailwind CSS.
         </p>
+        <div class="project-links">
+          <a href="https://quick-chores.vercel.app/" target="_blank" class="project-button">
+            <i class="fas fa-external-link-alt"></i>
+            <span>Live Demo</span>
+          </a>
+          <a href="https://github.com/dgrimes1023/QuickChores" target="_blank" class="project-button">
+            <i class="fab fa-github"></i>
+            <span>View Code</span>
+          </a>
+        </div>
+      </div>
+    </a>
+
+    <a href="https://github.com/dgrimes1023/TaskMate" target="_blank" style="text-decoration: none; color: inherit;">
+      <div class="project">
+        <h3>TaskMate – Task-Management Web Application</h3>
+        <p>
+          TaskMate is a full-stack web application built with Next.js, Node.js, and Tailwind CSS. 
+          It allows users to create, manage, and track tasks in a simple, intuitive interface.
+        </p>
+        <div class="project-links">
+          <a href="https://task-mate-dgrimes1023.vercel.app/" target="_blank" class="project-button">
+            <i class="fas fa-external-link-alt"></i>
+            <span>Live Demo</span>
+          </a>
+          <a href="https://github.com/dgrimes1023/TaskMate" target="_blank" class="project-button">
+            <i class="fab fa-github"></i>
+            <span>View Code</span>
+          </a>
+        </div>
       </div>
     </a>
 
