--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           Built the main page with Next.js and Node.js, with a focus on responsive design using Tailwind CSS.
         </p>
         <div class="project-links">
-          <a href="https://quick-chores.vercel.app/" target="_blank" class="project-button">
+          <a href="https://v0-quick-chores-4ovzthhlgge-ogn0fe.vercel.app/" target="_blank" class="project-button">
             <i class="fas fa-external-link-alt"></i>
             <span>Live Demo</span>
           </a>
@@ -83,7 +83,7 @@
           It allows users to create, manage, and track tasks in a simple, intuitive interface.
         </p>
         <div class="project-links">
-          <a href="https://task-mate-dgrimes1023.vercel.app/" target="_blank" class="project-button">
+          <a href="https://v0-quick-chores-4ovzthhlgge-ogn0fe.vercel.app/" target="_blank" class="project-button">
             <i class="fas fa-external-link-alt"></i>
             <span>Live Demo</span>
           </a>
