--- a/index.html
+++ b/index.html
@@ -27,15 +27,32 @@
     <div>
       <h2>About Me</h2>
       <p>
-        Hi, I’m Daniel Grimes, a junior Computer Science major with a minor in Finance
-        at Ohio University, graduating in May 2026. As an aspiring developer, I’m passionate
+        Hi, I'm Daniel Grimes, a junior Computer Science major with a minor in Finance
+        at Ohio University, graduating in May 2026. As an aspiring developer, I'm passionate
         about creating impactful solutions and am currently building a platform for task-based
         jobs. I am actively seeking co-op or internship opportunities where I can contribute
-        to innovative projects, apply my skills, and grow as a developer. Let’s connect!
+        to innovative projects, apply my skills, and grow as a developer. Let's connect!
       </p>
     </div>
   </section>
 
+  <!-- Education Section -->
+  <section id="education">
+    <h2>Education</h2>
+    <div class="education-card">
+      <div class="education-header">
+        <h3>Ohio University</h3>
+        <span class="education-date">2022 - 2026</span>
+      </div>
+      <p class="education-degree">Bachelor of Science in Computer Science</p>
+      <p class="education-minor">Minor in Finance</p>
+      <ul class="education-details">
+        <li>GPA: 3.8/4.0</li>
+        <li>Dean's List: Fall 2022 - Present</li>
+        <li>Relevant Coursework: Data Structures, Algorithms, Software Engineering, Database Systems</li>
+      </ul>
+    </div>
+  </section>
 
   <!-- Skills Section -->
   <section id="skills">
@@ -64,6 +81,17 @@
         </p>
       </div>
     </a>
+
+    <a href="https://github.com/dgrimes1023/TaskMate" target="_blank" style="text-decoration: none; color: inherit;">
+      <div class="project">
+        <h3>TaskMate – A Modern Task Tracker for Daily Workflow</h3>
+        <p>
+          A sleek and efficient to-do list app designed to help users organize and manage tasks effortlessly.  
+          Built with Next.js and Node.js, featuring a responsive UI styled with Tailwind CSS for a seamless user experience.
+        </p>
+      </div>
+    </a>
+    
 
     <a href="https://github.com/OU-CS3560/s24-wordle-fibble-3" target="_blank" style="text-decoration: none; color: inherit;">
       <div class="project">
