--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
       <p class="education-degree">Bachelor of Science in Computer Science</p>
       <p class="education-minor">Minor in Finance</p>
       <ul class="education-details">
-        <li>GPA: 3.8/4.0</li>
+        <li>GPA: 3.7/4.0</li>
         <li>Dean's List: Fall 2022 - Present</li>
-        <li>Relevant Coursework: Data Structures, Algorithms, Software Engineering, Database Systems</li>
+        <li>Relevant Coursework: Data Structures, Algorithms, Software Engineering, Database Systems, Game Engine Design</li>
       </ul>
     </div>
   </section>
@@ -58,15 +58,15 @@
   <section id="skills">
     <h2>Skills</h2>
     <ul>
-      <li>Programming Languages: Python, C++, JavaScript, Ocaml</li>
-      <li>Web Development: HTML, CSS, React.js, Next.js, Node.js</li>
-      <li>Tools: Git, GitHub, Figma</li>
-      <li>Database Management: MySQL, MongoDB</li>
-      <li>Operating Systems: Windows, Linux</li>
-      <li>Data Analysis & Analytical Thinking</li>
-      <li>Debugging and Unit Testing</li>
+        <li><strong>Programming & Software Development:</strong> Python, C++, JavaScript, TypeScript</li>
+        <li><strong>Full-Stack Web Development:</strong> React.js, Next.js, Node.js, HTML, CSS</li>
+        <li><strong>Version Control & Collaboration:</strong> Git, GitHub, Figma</li>
+        <li><strong>Database Management & Backend:</strong> MySQL, MongoDB</li>
+        <li><strong>Systems & Environments:</strong> Windows, Linux</li>
+        <li><strong>Problem Solving & Software Optimization:</strong> Debugging, Unit Testing, Data Analysis</li>
     </ul>
-  </section>
+</section>
+
 
   <!-- Projects Section -->
   <section id="projects">
@@ -95,7 +95,7 @@
 
     <a href="https://github.com/OU-CS3560/s24-wordle-fibble-3" target="_blank" style="text-decoration: none; color: inherit;">
       <div class="project">
-        <h3>Wordle Recreation with AI Solver</h3>
+        <h3>Python Wordle Recreation with AI Solver</h3>
         <p>
           Recreated the game "Wordle" with a five-person team, contributing to the dynamic GUI and AI algorithm
           for solving puzzles. Technologies: Python, Pygame, and GitHub.
