--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
 </head>
 
 <body>
+  <!-- Navigation Menu -->
+  <nav class="nav-menu">
+    <ul>
+      <li><a href="#about">About</a></li>
+      <li><a href="#education">Education</a></li>
+      <li><a href="#skills">Skills</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+
   <!-- Header Section -->
   <header>
     <div id="particles-js"></div>
