--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <li><a href="#education">Education</a></li>
       <li><a href="#skills">Skills</a></li>
       <li><a href="#projects">Projects</a></li>
+      <li><a href="#involvement">Involvement</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
   </nav>
@@ -125,6 +126,37 @@
     </a>
   </section>
 
+  <!-- Involvement Section -->
+  <section id="involvement">
+    <h2>Campus Involvement</h2>
+    
+    <div class="involvement-card">
+      <div class="involvement-header">
+        <h3>Ohio University Artificial Intelligence Club</h3>
+        <span class="involvement-date">August 2024 - Present</span>
+      </div>
+      <p class="involvement-role">Head of Research & Development</p>
+      <ul class="involvement-details">
+        <li>Lead research efforts to support club initiatives and discussions</li>
+        <li>Develop and curate presentation materials for club meetings</li>
+        <li>Collaborate with members to explore emerging AI trends and technologies</li>
+        <li>Assist in organizing and structuring educational content for workshops</li>
+      </ul>
+    </div>
+
+    <div class="involvement-card">
+      <h3>Sigma Alpha Epsilon Fraternity</h3>
+      <span class="involvement-date">August 2023 - Present</span>
+      <p class="involvement-role">Member</p>
+      <ul class="involvement-details">
+        <li>Participated in philanthropic events and community service projects</li>
+        <li>Engaged in leadership development and brotherhood activities</li>
+        <li>Assisted in planning and executing fraternity-sponsored events</li>
+        <li>Contributed to fundraising efforts for charitable organizations</li>
+        <li>Collaborated with fellow members to foster a strong and supportive community</li>
+      </ul>
+    </div>
+  </section>
 
   <!-- Contact Section -->
   <section id="contact">
