--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
 
     new Typed('.typed', {
       strings: [
-        'Junior Software Developer',
+        'Junior Software Engineer',
         'Computer Science Student',
         'Ohio University',
       ],
