--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Portfolio website of a junior computer science student seeking opportunities.">
   <title>Daniel Grimes' Portfolio</title>
+  <link rel="icon" type="image/png" href="DG_Logo_Small.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-dg-round.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-dg-16x16.png">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
